--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 server.port=8001
 #log config
-#logging.config=classpath:log4j2.xml
+logging.config=classpath:log4j2.xml
 brpc.global.naming.naming-service-url=list://127.0.0.1:8002
